# RGS

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Application.cpp  Application.h  Maths.cpp  Maths.h  Window.cpp  WindowsWindow.cpp
src/ImGui/: ImGuiWindow.cpp  ImGuiWindow.h  imgui_stdlib.cpp
src/RGS/: Base.h  Framebuffer.cpp  Framebuffer.h  InputCodes.h  Maths.cpp  Maths.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Window.h  WindowsWindow.cpp  WindowsWindow.h
src/RGS/Shaders/: BlinnShader.cpp  BlinnShader.h  ShaderBase.h
